--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iobroker.epson_xp540",
-  "version": "0.0.1",
-  "description": "Periodically retrieves the status information and cartridge level of an EPSON XP-540 printer",
+  "version": "1.0.0",
+  "description": "Periodically retrieves the status information and ink cartridge level of an EPSON XP-540 printer",
   "author": {
     "name": "tikodu",
     "email": "till@dusoft.de"
@@ -19,7 +19,8 @@
     "url": "git@github.com:tikodu/ioBroker.epson_xp540.git"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0"
+    "@iobroker/adapter-core": "^2.4.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.4.2",
@@ -28,12 +29,12 @@
     "@types/gulp": "^4.0.8",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.21",
+    "@types/node-fetch": "^2.5.8",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^9.0.10",
     "@types/sinon-chai": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.18.0",
