--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
 		// this is necessary for the automatic typing of the adapter config
 		"resolveJsonModule": true,
 
