--- a/package.json
+++ b/package.json
@@ -27,22 +27,22 @@
     "@types/chai": "^4.2.15",
     "@types/chai-as-promised": "^7.1.3",
     "@types/gulp": "^4.0.8",
-    "@types/mocha": "^8.2.2",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.8",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^9.0.10",
     "@types/sinon-chai": "^3.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.15.2",
     "axios": "^0.21.1",
     "chai": "^4.3.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.21.0",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "gulp": "^4.0.2",
-    "mocha": "^8.3.2",
+    "mocha": "^8.3.0",
     "prettier": "^2.2.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
@@ -61,6 +61,7 @@
     "watch": "npm run watch:ts",
     "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
     "test:package": "mocha test/package --exit",
+    "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
